tests/ui/borrowck/borrowck-borrowed-uniq-rvalue-2.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-borrowed-uniq-rvalue-2.rs:20:20
   |
LL |     let x = defer(&vec!["Goodbye", "world!"]);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |                    |
   |                    creates a temporary value which is freed while still in use
LL |     x.x[0];
   |     ------ borrow later used here
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using a `let` binding to create a longer lived value
   |
LL ~     let binding = vec!["Goodbye", "world!"];
LL ~     let x = defer(&binding);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
